Forgot/reset password documentation added.
