# storage/api-docs/api-docs.json
@@ -5,7 +5,7 @@
         "license": {
             "name": "Makli's License"
         },
-        "version": "1.0.0"
+        "version": "4.2.0"
     },
     "consumes": [
         "application/json"
@@ -258,6 +258,153 @@
                 }
             }
         },
+        "/me": {
+            "get": {
+                "tags": [
+                    "User"
+                ],
+                "description": "If logged in, returns basic details of current user.",
+                "operationId": "me",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "access_token",
+                        "in": "query",
+                        "description": "User's token",
+                        "required": false,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "User info retrieved",
+                        "schema": {
+                            "$ref": "#/definitions/User"
+                        }
+                    },
+                    "401": {
+                        "description": "Invalid token"
+                    }
+                }
+            }
+        },
+        "/password/forgot": {
+            "post": {
+                "tags": [
+                    "User"
+                ],
+                "description": "Forgot password",
+                "operationId": "forgotPassword",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "email",
+                        "in": "body",
+                        "description": "User's email",
+                        "required": true,
+                        "schema": {
+                            "required": [
+                                "email"
+                            ],
+                            "properties": {
+                                "email": {
+                                    "type": "string"
+                                }
+                            }
+                        },
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Email sent to user"
+                    },
+                    "400": {
+                        "description": "User not found"
+                    }
+                }
+            }
+        },
+        "/password/reset": {
+            "post": {
+                "tags": [
+                    "User"
+                ],
+                "description": "Reset password with given reset token",
+                "operationId": "resetPassword",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "reset_token",
+                        "in": "body",
+                        "description": "Reset token",
+                        "required": true,
+                        "schema": {
+                            "required": [
+                                "email"
+                            ],
+                            "properties": {
+                                "reset_token": {
+                                    "type": "string"
+                                }
+                            }
+                        },
+                        "type": "string"
+                    },
+                    {
+                        "name": "password_field",
+                        "in": "body",
+                        "description": "Password",
+                        "required": true,
+                        "schema": {
+                            "required": [
+                                "email"
+                            ],
+                            "properties": {
+                                "password_field": {
+                                    "type": "string"
+                                }
+                            }
+                        },
+                        "type": "string"
+                    },
+                    {
+                        "name": "password_field_verification",
+                        "in": "body",
+                        "description": "Password Verification",
+                        "required": true,
+                        "schema": {
+                            "required": [
+                                "email"
+                            ],
+                            "properties": {
+                                "password_field_verification": {
+                                    "type": "string"
+                                }
+                            }
+                        },
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Password resetted"
+                    },
+                    "498": {
+                        "description": "Invalid reset token"
+                    },
+                    "412": {
+                        "description": "Password mismatch"
+                    }
+                }
+            }
+        },
         "/workorders": {
             "get": {
                 "tags": [
@@ -337,6 +484,12 @@
             "type": "array",
             "items": {
                 "$ref": "#/definitions/MobilePhoneModel"
+            }
+        },
+        "Users": {
+            "type": "array",
+            "items": {
+                "$ref": "#/definitions/User"
             }
         },
         "Brand": {
@@ -422,6 +575,43 @@
                 }
             }
         },
+        "User": {
+            "required": [
+                "id",
+                "first_name",
+                "last_name",
+                "email",
+                "password",
+                "user_level",
+                "is_active"
+            ],
+            "properties": {
+                "id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "last_name": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "user_level": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "is_active": {
+                    "type": "integer",
+                    "format": "int64"
+                }
+            }
+        },
         "WorkOrder": {
             "required": [
                 "id",
@@ -444,7 +634,11 @@
                 "notes": {
                     "type": "string"
                 },
-                "assigned_to": {
+                "assigned_to_user_id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "created_by_user_id": {
                     "type": "integer",
                     "format": "int64"
                 },
